--- a/frontend/src/MapView/POI/POIDetails.css
+++ b/frontend/src/MapView/POI/POIDetails.css
@@ -95,8 +95,26 @@
 .poi-date {
   display: block; /* Or inline-block, depending on your design */
   text-align: left;
-  padding-left: 10%;
   font-style: italic;
+  align-self: flex-start;
+  font-weight: bolder;
+  font-size: 0.8em;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
+    1px 1px 0 #000;
+}
+
+.poi-day {
+  display: block; /* Or inline-block, depending on your design */
+  text-align: left;
+  font-style: italic;
+  align-self: flex-start;
+  font-weight: bolder;
+  font-size: 0.8em;
+  padding-left: 10px;
+  text-shadow: -1px -1px 0 #000, /* top left shadow */ 1px -1px 0 #000,
+    /* top right shadow */ -1px 1px 0 #000,
+    /* bottom left shadow */ 1px 1px 0 #000; /* bottom right shadow */
+  margin-bottom: 10px;
 }
 
 .poi-tags {
