--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,7 @@
 .App {
   text-align: center;
   min-height: 100vh;
+  min-height: -webkit-fill-available;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -9,6 +10,12 @@
   max-height: 100vh;
   max-height: -wekit-fill-available;
   overflow: hidden;
+}
+
+body {
+  max-height: 100vh;
+  max-height: -wekit-fill-available;
+  min-height: -webkit-fill-available;
 }
 
 html {
