Update map marker positioning and centering*** ***Update POI details alignment and styling*** ***Adjust height of swipeable edge drawer

--- a/frontend/src/MapView/POI/POIDetails.css
+++ b/frontend/src/MapView/POI/POIDetails.css
@@ -48,6 +48,7 @@
   justify-content: center;
   align-content: center;
   justify-items: center;
+  text-align: center;
 }
 
 .slide-in-div button {
@@ -68,6 +69,7 @@
   margin-bottom: 0;
   margin-top: 0;
   color: black !important;
+  text-align: center;
   font-family: "Indie Flower", cursive; /* The fun, whimsical font */
   text-shadow: -1px -1px 0 #fff, /* top left shadow */ 1px -1px 0 #fff,
     /* top right shadow */ -1px 1px 0 #fff,
