--- a/frontend/src/MapView/POI/POIDetails.css
+++ b/frontend/src/MapView/POI/POIDetails.css
@@ -57,7 +57,6 @@
   display: flex;
   flex-direction: column;
   align-items: center; /* Center children horizontally */
-  justify-content: space-between; /* Space out children vertically */
   overflow-y: visible;
   padding-left: 0;
   padding-right: 0;
@@ -81,6 +80,7 @@
 .poi-title {
   margin-bottom: 0;
   margin-top: 0;
+  display: flex;
   color: black !important;
   text-align: center;
   font-family: "Indie Flower", cursive; /* The fun, whimsical font */
@@ -160,7 +160,6 @@
   color: black !important;
   text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff,
     1px 1px 0 #fff;
-  margin-top: 10px;
 }
 
 .poi-day {
@@ -174,7 +173,6 @@
   text-shadow: -1px -1px 0 #fff, /* top left shadow */ 1px -1px 0 #fff,
     /* top right shadow */ -1px 1px 0 #fff,
     /* bottom left shadow */ 1px 1px 0 #fff; /* bottom right shadow */
-  margin-bottom: 0;
 }
 
 .poi-date.row {
