--- a/frontend/src/MapView/POI/POIDetails.css
+++ b/frontend/src/MapView/POI/POIDetails.css
@@ -163,7 +163,7 @@
   font-style: italic;
   align-self: flex-start;
   font-weight: bolder;
-  font-size: 0.8em;
+  font-size: 0.85em;
   color: black !important;
   text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff,
     1px 1px 0 #fff;
@@ -175,7 +175,7 @@
   font-style: italic;
   align-self: flex-start;
   font-weight: bolder;
-  font-size: 0.8em;
+  font-size: 0.85em;
   padding-left: 10px;
   text-shadow: -1px -1px 0 #fff, /* top left shadow */ 1px -1px 0 #fff,
     /* top right shadow */ -1px 1px 0 #fff,
@@ -188,14 +188,13 @@
   font-style: italic;
   align-self: center;
   font-weight: bolder;
-  font-size: 0.8em;
+  font-size: 0.85em !important;
   color: black !important;
   text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff,
     1px 1px 0 #fff;
   margin-top: 0;
   margin-bottom: -4px;
   overflow: visible;
-  font-size: 0.8em !important;
 }
 
 .poi-date.row {
@@ -204,7 +203,7 @@
   font-style: italic;
   align-self: center;
   font-weight: bolder;
-  font-size: 0.8em;
+  font-size: 0.9em;
   color: black !important;
   text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff,
     1px 1px 0 #fff;
@@ -212,12 +211,12 @@
 }
 
 .poi-day.row {
-  display: flex; /* Or inline-block, depending on your design */
+  display: inline; /* Or inline-block, depending on your design */
   text-align: center;
   font-style: italic;
   align-self: center;
   font-weight: bolder;
-  font-size: 0.8em;
+  font-size: 0.9em;
   padding-left: 5px;
   text-shadow: -1px -1px 0 #fff, /* top left shadow */ 1px -1px 0 #fff,
     /* top right shadow */ -1px 1px 0 #fff,
